# UnifySQL

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yaml
tests/unit/: test_compiler.py  test_enricher.py  test_extractor.py  test_golden.py  test_scrubber.py  test_store.py  test_tracer.py  test_validator.py
unifysql/: config.py  exceptions.py
unifysql/api/: app.py  middleware.py  models.py
unifysql/api/routes/: feedback.py  semantic.py  translate.py
unifysql/eval/: golden.py  golden_set.json  harness.py
unifysql/execution/: adaptor.py  bigquery_executor.py  postgres_executor.py  snowflake_executor.py
unifysql/feedback/: retriever.py  store.py
unifysql/ingestion/: adaptor.py  bigquery_adaptor.py  enricher.py  extractor.py  postgres_adaptor.py  snowflake_adaptor.py
unifysql/observability/: logger.py  metrics.py  scrubber.py  tracer.py
unifysql/semantic/: annotator.py  embedder.py  mapper.py  models.py  prompts.py  store.py
unifysql/translation/: compiler.py  context_builder.py  prompts.py  translator.py  validator.py
