[project]
name = "unifysql"
version = "0.1.0"
description = "Model-agnostic Text-to-SQL pipeline with an automatically constructed and maintained semantic layer."
authors = [
    {name = "atremante26",email = "atremante26@amherst.edu"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "langchain (>=1.2.13,<2.0.0)",
    "langchain-openai (>=1.1.12,<2.0.0)",
    "langchain-anthropic (>=1.4.0,<2.0.0)",
    "sqlglot (>=30.1.0,<31.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "snowflake-sqlalchemy (>=1.9.0,<2.0.0)",
    "sqlalchemy-bigquery (>=1.16.0,<2.0.0)",
    "chromadb (>=1.5.7,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "click (>=8.3.2,<9.0.0)",
    "flask-cors (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.8,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["benchmarks/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"